# atelier

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Makefile
.claude/rules/: database-url-decommission-pending.md  deploy-chain.md  docs-first.md  homeroute-out-of-scope.md  logging.md  next-plan.md  path-routing-pending.md  testing.md  zero-downtime.md
.claude/skills/collect-issues/: SKILL.md  collect.sh
crates/atelier/: Cargo.toml
crates/atelier-api/: Cargo.toml
crates/atelier-api/src/: host_gate.rs  lib.rs  pm_prompts.rs  state.rs
crates/atelier-api/src/clients/: flowd.rs  homeroute.rs  homeroute_service.rs  mod.rs
crates/atelier-api/src/mcp/: apps_ops.rs  dto.rs  dv_client_ops.rs  dv_ops.rs  env_ops.rs  mod.rs  scaffold.rs
crates/atelier-api/src/routes/: agent.rs  apps.rs  apps_db.rs  apps_proxy.rs  backup.rs  docs.rs  dv.rs  flows.rs  git.rs  health.rs  homeroute.rs  hooks.rs  issues.rs  logs.rs  mcp.rs  mod.rs  notifications.rs  pilot.rs  source.rs  stats.rs  store.rs  surveillance.rs  tasks.rs  ws.rs
crates/atelier-apps/: Cargo.toml
crates/atelier-apps/src/: context.rs  db_manager.rs  lib.rs  metrics.rs  port_registry.rs  registry.rs  supervisor.rs  types.rs
crates/atelier-backup/: Cargo.toml
crates/atelier-backup/migrations/: 001_init.sql
crates/atelier-backup/src/: lib.rs  migration.rs  models.rs  pgdump.rs  rclone.rs  restic.rs  runs.rs  scheduler.rs  service.rs  sources.rs  target.rs
crates/atelier-common/: Cargo.toml
crates/atelier-common/migrations/: 001_control.sql
crates/atelier-common/src/: agent_auth.rs  agent_ui_state.rs  app_claude_auth.rs  codex_auth.rs  control_db.rs  conversation_meta.rs  events.rs  homeroute.rs  issue_store.rs  lib.rs  notification_store.rs  task_store.rs  tasks.rs  usage_stats.rs
crates/atelier-common/src/logging/: types.rs
crates/atelier-dataverse/: Cargo.toml
crates/atelier-dataverse-migrate/: Cargo.toml
crates/atelier-dataverse-migrate/src/: lib.rs  main.rs
crates/atelier-dataverse/src/: audit.rs  crud.rs  dv_io.rs  engine.rs  error.rs  expand.rs  lib.rs  manager.rs  migration.rs  provisioning.rs  query.rs  schema.rs  validation.rs
crates/atelier-dataverse/tests/: integration_smoke.rs
crates/atelier-db/: Cargo.toml
crates/atelier-docs/: Cargo.toml
crates/atelier-docs/src/: fs.rs  index.rs  lib.rs  migrate.rs
crates/atelier-dv-codegen/: Cargo.toml
crates/atelier-dv-codegen/src/: generator.rs  lib.rs  main.rs
crates/atelier-dvexpr/: Cargo.toml
crates/atelier-dvexpr/src/: checker.rs  eval.rs  lexer.rs  lib.rs
crates/atelier-git/: Cargo.toml
crates/atelier-git/src/: cgi.rs  service.rs  types.rs
crates/atelier-ipc/: Cargo.toml
crates/atelier-ipc/src/: edge.rs  lib.rs  types.rs
crates/atelier-logging/: Cargo.toml
crates/atelier-logging-shipper/: Cargo.toml
crates/atelier-logging-shipper/src/: lib.rs
crates/atelier-logging/migrations/: 001_init.sql
crates/atelier-logging/src/: ingest.rs  layer.rs  lib.rs  migration.rs  query.rs  ring_buffer.rs  shipper.rs  store.rs  types.rs
crates/atelier-pilot/: Cargo.toml
crates/atelier-pilot/migrations/: 001_init.sql
crates/atelier-pilot/src/: backlog.rs  engine.rs  gitops.rs  lib.rs  runs.rs  schedule.rs  service.rs  triage.rs
crates/atelier-watcher/: Cargo.toml
crates/atelier-watcher/migrations/: 001_init.sql
crates/atelier-watcher/src/: claude.rs  codex.rs  config.rs  findings.rs  git_watcher.rs  gitutil.rs  lib.rs  memory.rs  migration.rs  runner.rs  runs.rs  scandef.rs  service.rs  sweep_scheduler.rs
crates/atelier-watcher/src/prompts/: code_review.md  security.md  suggestions.md
crates/atelier/src/: main.rs  source_watcher.rs
crates/hr-apps/: Cargo.toml
crates/hr-apps/src/: context.rs  lib.rs  port_registry.rs  registry.rs  supervisor.rs  types.rs
crates/hr-dataverse/: Cargo.toml
crates/hr-dataverse-migrate/src/: lib.rs  main.rs
crates/hr-dataverse/src/: crud.rs  dv_io.rs  engine.rs  lib.rs  manager.rs  provisioning.rs  query.rs
crates/hr-dvexpr/src/: parser.rs
crates/hr-flow/: Cargo.toml
crates/hr-flow-callback/: Cargo.toml
crates/hr-flow-callback/src/: auth.rs  handler.rs  lib.rs  router.rs
crates/hr-flow-daemon/: Cargo.toml
crates/hr-flow-daemon/src/: auth.rs  callback.rs  engine_factory.rs  error.rs  lib.rs  main.rs  registry.rs  state.rs  supervisor.rs
crates/hr-flow-daemon/src/routes/: admin.rs  definitions.rs  health.rs  mod.rs  runs.rs
crates/hr-flow-daemon/tests/: e2e.rs
crates/hr-flow-macros/: Cargo.toml
crates/hr-flow/src/: connector.rs  connectors_managed.rs  definition.rs  engine.rs  engine_trait.rs  error.rs  executor.rs  expr.rs  lib.rs  persist.rs  remote_engine.rs  replay.rs  validate.rs
crates/hr-flow/src/connectors_managed/: dataverse.rs  homeroute.rs  http.rs
crates/hr-flow/tests/: end_to_end.rs
docs/: plan-extraction.md  plan-hr-flowd.md  plan-rapatriement.md
docs/migration-prompts/: next.md  rust.md
docs/refonte/: 00-preconditions.md  01-logging-infra.md  03-teardown-flows.md  04-logging-shipper.md  2026-05-27-studio-medion.md  PROGRESS.md  archive-plan-hr-flowd-OBSOLETE.md
runner/: eslint.config.js  package-lock.json  package.json
runner/src/: codex.js  codex_worker.js  common.js  runner.js  scan.js  worker.js
scripts/: deploy-app.sh  deploy-flowd.sh  migrate-app.sh  pilot-atelier-worker.sh  swap-edge-routes.sh  sync-docs.sh  sync-git.sh  sync-runs.sh  sync-state.sh  sync-store.sh
systemd/: atelier-sync-docs.service  atelier-sync-docs.timer  atelier-sync-git.service  atelier-sync-git.timer  atelier-sync-runs.service  atelier-sync-runs.timer  atelier-sync-state.service  atelier-sync-state.timer  atelier-sync-store.service  atelier-sync-store.timer  atelier.service  hr-flowd.service
web/: eslint.config.js  index.html  package-lock.json  package.json  studio.html  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.js  vite.config.studio.js  vite.config.ts
web/public/: maintenance.html  manifest.json  sw.js
web/scripts/: generate-pwa-icons.mjs
web/src/: App.jsx  App.tsx  StudioApp.jsx  api.ts  index.css  main-studio.jsx  nav.ts  styles.css
(+157 files in other folders)
