[workspace]
resolver = "2"
exclude = [
    # Stand-alone shipper crate used by apps; not part of the workspace so
    # apps can keep their own reqwest 0.12 without clashing.
    "crates/atelier-logging-shipper",
]
members = [
    "crates/atelier",
    "crates/atelier-api",
    "crates/atelier-logging",
    "crates/hr-apps",
    "crates/hr-dataverse",
    "crates/hr-dataverse-migrate",
    "crates/hr-db",
    "crates/hr-dv-codegen",
    "crates/hr-dvexpr",
    "crates/hr-git",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# DB
rusqlite = { version = "0.39", features = ["bundled"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
futures-util = "0.3"
futures = "0.3"

# Lock-free shared state for the flow daemon (RCU registry + per-run handles)
arc-swap = "1.7"
dashmap = "6"
num_cpus = "1.16"
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "multipart", "stream"] }

# WebSocket client (used by atelier-api apps_proxy to bridge browser ↔ upstream apps)
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }

# Path-deps shared homeroute (à terme : repo `homeroute-core` séparé)
# La source de vérité reste /nvme/homeroute/crates/shared/. Ne pas modifier ces crates depuis Atelier.
hr-common = { path = "/nvme/homeroute/crates/shared/hr-common" }
hr-ipc    = { path = "/nvme/homeroute/crates/shared/hr-ipc" }
hr-docs   = { path = "/nvme/homeroute/crates/shared/hr-docs" }

# Crates internes Atelier (déplacés depuis homeroute le 2026-05-09)
hr-apps              = { path = "crates/hr-apps" }
hr-dataverse         = { path = "crates/hr-dataverse" }
hr-dataverse-migrate = { path = "crates/hr-dataverse-migrate" }
hr-db                = { path = "crates/hr-db" }
hr-dv-codegen        = { path = "crates/hr-dv-codegen" }
hr-dvexpr            = { path = "crates/hr-dvexpr" }
hr-git               = { path = "crates/hr-git" }

# Postgres + sqlx — voir commentaire dans homeroute Cargo.toml
sqlx-core    = { version = "0.8.6", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "json", "chrono", "uuid", "migrate"] }
sqlx-postgres = { version = "0.8.6", default-features = false, features = ["chrono", "uuid", "json", "migrate", "bigdecimal"] }
async-graphql = { version = "7.0", default-features = false, features = ["dynamic-schema", "dataloader", "chrono", "uuid"] }

# Crates internes Atelier
atelier-api     = { path = "crates/atelier-api" }
atelier-logging = { path = "crates/atelier-logging" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
