[workspace]
resolver = "2"
exclude = [
    # Stand-alone shipper crate used by apps; not part of the workspace so
    # apps can keep their own reqwest 0.12 without clashing.
    "crates/atelier-logging-shipper",
]
members = [
    "crates/atelier",
    "crates/atelier-api",
    "crates/atelier-logging",
    "crates/atelier-watcher",
    "crates/atelier-backup",
    "crates/atelier-apps",
    "crates/atelier-common",
    "crates/atelier-ipc",
    "crates/atelier-dataverse",
    "crates/atelier-docs",
    "crates/atelier-dv-codegen",
    "crates/atelier-dvexpr",
    "crates/atelier-git",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# DB
rusqlite = { version = "0.40", features = ["bundled"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
base64 = "0.22"
hex = "0.4"
sha2 = "0.11"
futures-util = "0.3"
ipnet = "2.9"

tokio-util = { version = "0.7", features = ["rt"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "multipart", "stream"] }

# WebSocket client (used by atelier-api apps_proxy to bridge browser ↔ upstream apps)
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }

# Crates internes Atelier (déplacés depuis homeroute le 2026-05-09 ; atelier-common,
# atelier-ipc & atelier-docs le 2026-05-30 — Atelier est désormais autonome, plus aucun
# path-dep vers /nvme/homeroute).
atelier-common            = { path = "crates/atelier-common" }
atelier-ipc               = { path = "crates/atelier-ipc" }
atelier-apps              = { path = "crates/atelier-apps" }
atelier-dataverse         = { path = "crates/atelier-dataverse" }
atelier-docs              = { path = "crates/atelier-docs" }
atelier-dv-codegen        = { path = "crates/atelier-dv-codegen" }
atelier-dvexpr            = { path = "crates/atelier-dvexpr" }
atelier-git               = { path = "crates/atelier-git" }

# Postgres + sqlx — voir commentaire dans homeroute Cargo.toml
sqlx-core    = { version = "0.9.0", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "json", "chrono", "uuid", "migrate"] }
sqlx-postgres = { version = "0.9.0", default-features = false, features = ["chrono", "uuid", "json", "migrate", "bigdecimal"] }

# Crates internes Atelier
atelier-api     = { path = "crates/atelier-api" }
atelier-logging = { path = "crates/atelier-logging" }
atelier-watcher = { path = "crates/atelier-watcher" }
atelier-backup  = { path = "crates/atelier-backup" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
