[package]
name = "atelier-api"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

hr-common    = { workspace = true }
hr-docs      = { workspace = true }
rusqlite     = { workspace = true }
hr-git       = { workspace = true }
hr-ipc       = { workspace = true }
hr-dataverse = { workspace = true }
hr-flow      = { workspace = true }
hr-apps      = { workspace = true }
sqlx-core    = { workspace = true }
sqlx-postgres = { workspace = true }
reqwest      = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
