[package]
name = "atelier-api"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }

atelier-common    = { workspace = true }
atelier-docs      = { workspace = true }
atelier-git       = { workspace = true }
atelier-ipc       = { workspace = true }
atelier-dataverse = { workspace = true }
atelier-dv-codegen = { workspace = true }
atelier-apps      = { workspace = true }
atelier-logging = { workspace = true }
atelier-watcher = { workspace = true }
atelier-backup  = { workspace = true }
atelier-pilot   = { workspace = true }
sqlx-core    = { workspace = true }
sqlx-postgres = { workspace = true }
reqwest      = { workspace = true }
parking_lot  = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
