[package]
name = "atelier-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ipnet = { workspace = true }
uuid = { workspace = true }
sqlx-core = { workspace = true }
sqlx-postgres = { workspace = true }
