[package]
name = "atelier-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
atelier-common = { path = "../atelier-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
