[package]
name = "atelier-logging-shipper"
version = "0.1.0"
edition = "2021"

# Standalone crate (NOT part of the Atelier workspace) so that apps using
# reqwest 0.12 can depend on it without colliding with the workspace's
# reqwest 0.13. Atelier root Cargo.toml excludes this directory.
[workspace]

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
