[package]
name = "atelier-logging"
version.workspace = true
edition.workspace = true

[dependencies]
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
uuid           = { workspace = true }
reqwest        = { workspace = true }
sqlx-core      = { workspace = true }
sqlx-postgres  = { workspace = true }
parking_lot    = "0.12"
