[package]
name = "atelier-watcher"
version.workspace = true
edition.workspace = true

[dependencies]
tokio          = { workspace = true }
tracing        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
anyhow         = { workspace = true }
uuid           = { workspace = true }
sqlx-core      = { workspace = true }
sqlx-postgres  = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc           = { workspace = true }
