[package]
name = "hr-flow-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atelier-flowd"
path = "src/main.rs"

[lib]
name = "hr_flow_daemon"
path = "src/lib.rs"

[dependencies]
# Async runtime + HTTP framework
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Lock-free shared state
arc-swap = { workspace = true }
dashmap = { workspace = true }
num_cpus = { workspace = true }

# Async helpers
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging + errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Misc
uuid = { workspace = true }
chrono = { workspace = true }

# Outbound HTTP for app callbacks (custom actions / connectors)
reqwest = { workspace = true }

# Internal Atelier crates
hr-flow = { workspace = true }
hr-apps = { workspace = true }
hr-dataverse = { workspace = true }

[dev-dependencies]
tempfile = "3"
